--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
-  "name": "zerodue",
+  "name": "zerodue-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start -c",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "init:tailwind": "tailwindcss init",
+    "expo:install": "expo install",
+    "expo": "expo",
+    "expo:prebuild": "expo prebuild"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.14",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-hook-form": "^7.51.2",
+    "react-native": "0.73.6",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-query": "^3.39.3",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.0"
   },
   "private": true
 }
