--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo:prebuild": "expo prebuild"
   },
   "dependencies": {
+    "@expo/metro-config": "~0.17.1",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-community/datetimepicker": "7.6.1",
     "dayjs": "^1.11.10",
@@ -26,8 +27,14 @@
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-otp-entry": "^1.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "13.6.4",
     "react-query": "^3.39.3",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
