added api support and async-storage

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,7 @@
       "@schemas/*": ["app/schemas/*"],
       "@config/*": ["app/config/*"],
       "@utils/*": ["app/utils/*"],
+      "@api/*": ["app/api/*"],
       "@assets/*": ["assets/*"]
     }
   },
