--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start -c",
+    "start": "NODE_ENV=development expo start -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/metro-config": "~0.17.1",
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "dayjs": "^1.11.10",
     "expo": "~50.0.14",
@@ -23,6 +24,7 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
