--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "init:tailwind": "tailwindcss init",
     "expo:install": "expo install",
     "expo": "expo",
-    "expo:prebuild": "expo prebuild"
+    "expo:prebuild": "expo prebuild",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@expo/metro-config": "~0.17.1",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
+    "camelcase-keys": "^9.1.3",
     "dayjs": "^1.11.10",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
@@ -43,7 +46,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-plugin-module-resolver": "^5.0.0"
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5"
   },
   "private": true
 }
