--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-webview": "13.6.4",
     "react-query": "^3.39.3",
     "yup": "^1.4.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-linear-gradient": "~12.7.2",
+    "@shopify/flash-list": "1.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
