--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "expo": "expo",
     "expo:prebuild": "expo prebuild",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "start:lt": "lt --port 8000"
   },
   "dependencies": {
     "@expo/metro-config": "~0.17.1",
@@ -19,11 +20,13 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@shopify/flash-list": "1.6.3",
     "camelcase-keys": "^9.1.3",
     "dayjs": "^1.11.10",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
@@ -41,10 +44,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "13.6.4",
     "react-query": "^3.39.3",
+    "snakecase-keys": "^8.0.0",
     "yup": "^1.4.0",
-    "zustand": "^4.5.2",
-    "expo-linear-gradient": "~12.7.2",
-    "@shopify/flash-list": "1.6.3"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -53,6 +55,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "localtunnel": "^2.0.2",
     "prettier": "^3.2.5"
   },
   "private": true
