--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "lodash": "^4.17.21",
+    "moti": "^0.28.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-entry": "^1.6.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
