--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-entry": "^1.6.0",
