--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@shopify/flash-list": "1.6.3",
     "camelcase-keys": "^9.1.3",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.14",
+    "expo": "~50.0.15",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1304.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
