--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@shopify/flash-list": "1.6.3",
     "camelcase-keys": "^9.1.3",
     "dayjs": "^1.11.10",
+    "dayjs-plugin-utc": "^0.1.2",
     "expo": "~50.0.15",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
