--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo:prebuild": "expo prebuild",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start:lt": "lt --port 8000"
+    "start:lt": "lt --port 8000",
+    "eas-cli": "eas",
+    "eas-build-ios": "eas build --platform ios"
   },
   "dependencies": {
     "@expo/metro-config": "~0.17.1",
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "eas-cli": "^7.8.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^12.0.0",
