--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.10",
     "expo": "~50.0.15",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
@@ -45,6 +46,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-entry": "^1.6.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
@@ -55,8 +57,7 @@
     "react-query": "^3.39.3",
     "snakecase-keys": "^8.0.0",
     "yup": "^1.4.0",
-    "zustand": "^4.5.2",
-    "expo-dev-client": "~3.3.11"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
