--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "@shopify/flash-list": "1.6.3",
+    "@shopify/react-native-skia": "0.1.221",
     "camelcase-keys": "^9.1.3",
     "dayjs": "^1.11.10",
     "expo": "~50.0.15",
@@ -53,6 +54,7 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-webview": "13.6.4",
     "react-query": "^3.39.3",
     "snakecase-keys": "^8.0.0",
