--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint . --fix",
     "start:lt": "lt --port 8000",
     "eas-cli": "eas",
+    "start:prod": "expo start -c --no-dev --minify",
     "eas-build-ios": "eas build --platform ios",
     "eas-build-android": "eas build --platform android",
     "eas-build-android:preview": "eas build --profile preview --platform android"
@@ -72,5 +73,6 @@
     "localtunnel": "^2.0.2",
     "prettier": "^3.2.5"
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
 }
